--- a/src/components/FormLogon/style.css
+++ b/src/components/FormLogon/style.css
@@ -36,6 +36,7 @@ input {
     height: 60px;
     border: 1px solid #000;
     margin: 10px 0;
+    outline: 0;
 }
 
 button{
@@ -45,10 +46,13 @@ button{
     height: 50px;
     border-radius: 60px;
     margin-top: 10px;
+    border: none;
+    outline: 0;
 } 
 .back-link{
     color: #9C50E8;
     outline: 0;
+    cursor: pointer;
 }
 .texto-conta{
     margin-top: 20px;
